Ingress-Controller/tomcat/tomcat-ingress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-tomcat-deployment
  labels:
    app: tomcat
spec:
  replicas: 2
  strategy:   
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      name: tomcat
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomcat:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: tomcat-service
spec:
  type: ClusterIP
  selector:
    app: tomcat
  ports:
    - name: port2
      protocol: TCP
      port: 80 #8085
      targetPort: 8080
  type: LoadBalancer
