Ingress-Controller/tomcat/tomcat-ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /sample  #war file which is present inside webapps folder[inside container]
        pathType: Prefix
        backend: 
          service:
            name: tomcat-service
            port:
              number: 8080
